--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 
 *   {margin: 0%;
     padding: 0%;
-/* text-transform: capitalize; */
 }
 
 main{font-family:"roboto" sans-serif;
@@ -15,24 +14,28 @@ footer{ text-align: center;
 background-color: rgba(148, 144, 144, 0.573);}
 
 
-.barra-de-navegacion{
-    background-color: rgba(178, 126, 251, 0.989);
-    margin: 1px;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    position:sticky;
+
+.bg-kinails { background: #b690ff; }            
+.navbar .navbar-brand, .navbar .nav-link { color: #111; }
+.navbar .nav-link:hover { color: #000; }
+
+.navbar-toggler {
+    border-color: rgba(0,0,0,.15);
 }
-.nav-link  {
-    list-style: none;
-    padding: 10px;
-    margin: 10px;
-    display:flex;
-    
-} 
+.navbar-toggler-icon{
+    background-image: var(--bs-navbar-toggler-icon-bg, 
+    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0,0,0,0.8)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"));
+}
+
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 h1{text-align: center;
-color: rgb(0, 1, 1);
+color: rgb(0, 1, 1) !important;
 text-decoration: underline;
 }
 
@@ -79,7 +82,7 @@ font-weight: bold;
 }
 
 h2{
-    color: rgba(12, 163, 213, 0.795);
+    color: rgba(12, 163, 213, 0.795) !important;
     text-align: center;
     text-decoration: underline;
 }
@@ -125,7 +128,7 @@ h2{
 }
 
 h3{
-    color: rgba(12, 163, 213, 0.795);
+    color: rgba(12, 163, 213, 0.795) !important;
     text-align: center;
     text-decoration: underline;
     font-size: 1.7rem;
