--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libertinus+Mono&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     nav ul {
         flex-direction: column;
         align-items: center;
     }
-}
+} */
 
 @media (min-width: 768px) {
     #formulario-reserva {
@@ -284,8 +284,8 @@ h3 {
         padding: .9rem 1.6rem;
         font-weight: 700;
         cursor: pointer;
-        background: linear-gradient(135deg, var(--brand), #a0f7f4);
-        color: #36a7a5;
+        background: linear-gradient(135deg ,#774ae9, #a0f7f4);
+        color: #000909;
         box-shadow: 0 10px 20px rgba(121, 245, 242, .35);
     }
 
